--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@modules/login": "file:./modules/login/",
     "@modules/maps": "file:./modules/maps/",
     "@modules/privacy-policy": "file:./modules/privacy-policy",
+    "@modules/splash": "file:./modules/splash/",
     "@modules/terms-and-conditions-webview": "file:./modules/terms-and-conditions-webview/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-masked-view/masked-view": "^0.2.9",
@@ -40,6 +41,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
+    "react-native-splash-screen": "3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
     "react-native-webview": "11.23.0",
