--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@modules/privacy-policy": "file:./modules/privacy-policy",
     "@modules/splash": "file:./modules/splash/",
     "@modules/terms-and-conditions-webview": "file:./modules/terms-and-conditions-webview/",
+    "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
@@ -44,7 +45,7 @@
     "react-native-splash-screen": "3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
-    "react-native-webview": "11.23.0",
+    "react-native-webview": "^11.17.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
