--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -34,3 +34,4 @@ django-import-export = "*"
 drf-spectacular = "~=0.26.4"
 dj-rest-auth = "==5.0.1"
 cb-privacy-policy = {editable = true, path = "./modules/privacy_policy"}
+cb-django-wordpress = {editable = true, path = "./modules/django_wordpress"}
